<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title">Fade</string>
    <string name="no_plan_selected">No Breathplan found!</string>
    <string name="exercise_state">Übungsstatus: </string>
    <string name="running">Läuft</string>
    <string name="paused">Pausiert</string>
    <string name="stopped">Gestoppt / Abgeschlossen</string>
    <string name="remaining_time">Verbleibende Zeit: </string>
    <string name="main_start_exercise">Übung starten</string>
    <string name="main_stop_exercise">Übung stoppen</string>
    <string name="main_pause_exercise">Übung pausieren</string>
    <string name="main_continue_exercise">Übung fortsetzen</string>
    <string name="transparency_notification_title_template">Transparency (Titel): %1$s</string>
    <string name="notification_pause">Pause</string>
    <string name="notification_play">Play</string>
    <string name="notification_stop">Stop</string>
    <string name="notification_exercise_runnung">Übung läuft</string>
    <string name="notification_exercise_paused">Übung pausiert</string>
    <string name="notification_exercise_finished">Übung abgeschlossen</string>
    <string name="notification_exercise_finished_long">Ihre Übungseinheit ist abgeschlossen. Weiter so!</string>
    <string name="custom_color">Benutzerdefinierte Farbe</string>
    <string name="color_of_fog">Farbe des Nebels</string>
    <string name="red">Rot</string>
    <string name="green">Grün</string>
    <string name="blue">Blau</string>
    <string name="cancel">Abbrechen</string>
    <string name="submit">Übernehmen</string>
    <string name="com.apps.philipps.fade.preference_key_custom_color">com.apps.philipps.fade.preference_key_custom_color</string>
    <string name="com.apps.philipps.fade.preference_key_red">com.apps.philipps.fade.preference_key_red</string>
    <string name="com.apps.philipps.fade.preference_key_green">com.apps.philipps.fade.preference_key_green</string>
    <string name="com.apps.philipps.fade.preference_key_blue">com.apps.philipps.fade.preference_key_blue</string>
    <string name="com.apps.philipps.fade.preference_key_color_rgb">com.apps.philipps.fade.preference_key_color_rgb</string>

</resources>
