<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apps.philipps.fade.activities.Options">

    <TextView
        android:id="@+id/txtColorOfFog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/color_of_fog"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnStandardColor1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/standardColor1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnStandardColor2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/standardColor2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnStandardColor3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/standardColor3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnStandardColor4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/standardColor4" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnStandardColor5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/standardColor5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCustomColor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/custom_color" />

                <ToggleButton
                    android:id="@+id/btnCustomColor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="ToggleButton" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCustomColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtRed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/red" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/min1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0" />

                        <SeekBar
                            android:id="@+id/sbRed"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:max="255" />

                        <TextView
                            android:id="@+id/max1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="255" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtGreen"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/green" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/min2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0" />

                        <SeekBar
                            android:id="@+id/sbGreen"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:max="255" />

                        <TextView
                            android:id="@+id/max2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="255" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtBlue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/blue" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/min3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0" />

                        <SeekBar
                            android:id="@+id/sbBlue"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:max="255" />

                        <TextView
                            android:id="@+id/max3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="255" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/vwColorPreview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:gravity="bottom">

        <Button
            android:id="@+id/btnCancelOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnSubmitOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>
